# mev-inspect-pyrevm

./: .env.example  .gitignore  ANALYZE_REPO.py  CLEANUP_FOR_PRODUCTION.fish  DEPLOY_TO_PRODUCTION.fish  GIT_WORKFLOW.fish  PRODUCTION_DEPLOYMENT_GUIDE.md  README.md  README_OLD.md  README_PRODUCTION.md  SUMMARY.txt  TEST_PRODUCTION.fish  analyze_deployment.py  api_check.txt  check_api.py  check_pyrevm.py  clean_for_production.fish  final_test.txt  full_test_result.txt  pool_tokens_cache.db  pyproject.toml  pyrevm_api.txt  pyrevm_check.txt  quick_test.py  repo_analysis.txt  test_final.txt  test_output.txt  test_output2.txt  test_output_fixed.txt
benchmarks/: benchmark.py  benchmark_comparison.py  compare_modes.py  comparision.txt  profile_performance.py
docs/: ARCHITECTURE.md  CONTEXT.md  DEPLOYMENT_QUICK_START.md  IMPLEMENTATION_ROADMAP.md  MODE_COMPARISON.md  OVERVIEW.md  PHAN_TICH_CHI_TIET.md  PHASE1_COMPLETE.md  PHASE1_QUICKREF.md  PHASE1_SUMMARY.md  PHASE2_COMPLETE.py  PHASE2_PROGRESS.md  PHASE2_SUMMARY.md  PHASE3_COMPLETE.py  PHASE4_COMPLETE.py  PRODUCTION_GUIDE.md  PROJECT_COMPLETE.py  PYREVM_IMPLEMENTATION.md  PYREVM_INSTALL.md  REPORT.md  SCIENTIFIC_PAPER_TEMPLATE.md  TECHNICAL_DOCUMENTATION.md  TOM_TAT_PHAN_TICH.md  UPGRADE_PLAN.md
examples/: README.md  demo_batch_processing.py  demo_benchmark.py  demo_comparison.py  demo_full_pipeline.py  demo_mev_finder.py  demo_phase2_replay.py  demo_phase3_enhanced.py  demo_phase4_profit.py  test_pyrevm_real.py  validate_phase3_accuracy.py  verify_phase2.py
mev_inspect/: __init__.py  abi_decoder.py  cli.py  enhanced_swap_detector.py  inspector.py  models.py  pool_cache.py  pool_parser.py  profit_calculator.py  replay.py  rpc.py  rpc_sequential.py  simulator.py  state_manager.py
(+20 files in other folders)
